--- a/packages/doura/package.json
+++ b/packages/doura/package.json
@@ -1,6 +1,6 @@
 {
   "name": "doura",
-  "version": "0.0.0",
+  "version": "0.0.0-rc.0",
   "description": "A Redux Framework",
   "main": "lib/index.js",
   "module": "esm/index.js",
