--- a/packages/plugins/persist/package.json
+++ b/packages/plugins/persist/package.json
@@ -1,6 +1,6 @@
 {
   "name": "doura-plugin-persist",
-  "version": "0.0.0",
+  "version": "0.0.0-rc.0",
   "main": "lib/index.js",
   "module": "esm/index.js",
   "browser": "esm/index.js",
@@ -49,6 +49,6 @@
     "doura": "workspace:*"
   },
   "peerDependencies": {
-    "doura": "workspace:*"
+    "doura": "0.0.0-rc.0"
   }
 }
