chore: remove uncessary codes

--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,7 @@ node_modules
 packages/*/dist/
 packages/*/lib/
 packages/*/esm/
+packages/plugins/*/dist/
+packages/plugins/*/lib/
+packages/plugins/*/esm/
 examples/*/build
