--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,7 +2,4 @@ packages:
   - 'packages/*'
   - 'packages/plugins/*'
   - 'docs'
-  - 'examples/ssr'
-  - 'examples/spa'
-  - 'examples/tearing'
-  - 'examples/plugins'
+  - 'examples/*'
