--- a/examples/spa/package.json
+++ b/examples/spa/package.json
@@ -2,25 +2,24 @@
   "name": "example-spa",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "doura-react": "workspace:*",
-    "doura": "workspace:*",
-    "@types/react": "^16.9.43",
-    "@types/react-dom": "^16.9.6",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
-    "@craco/craco": "6.4.3",
-    "typescript": "^4.6.3"
-  },
-  "peerDependencies": {
-    "react": ">=16.8",
-    "react-dom": ">=16.8"
-  },
   "scripts": {
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
     "eject": "craco eject"
+  },
+  "dependencies": {
+    "doura-react": "workspace:*",
+    "doura": "workspace:*",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-scripts": "5.0.1",
+    "@craco/craco": "7.0.0",
+    "typescript": "^4.7.4"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.5",
+    "@types/react-dom": "^18.0.5"
   },
   "browserslist": {
     "production": [
