--- a/examples/ssr/package.json
+++ b/examples/ssr/package.json
@@ -2,35 +2,32 @@
   "name": "examples-ssr",
   "version": "0.0.1",
   "private": true,
-  "dependencies": {
-    "@types/node": "^13.11.0",
-    "doura-react": "workspace:*",
-    "doura": "workspace:*",
-    "express": "^4.17.3",
-    "express-status-monitor": "^1.3.4",
-    "react-scripts": "5.0.1",
-    "react-scripts-with-ssr": "0.6.0"
-  },
   "scripts": {
     "start": "react-scripts-with-ssr start",
     "build": "react-scripts-with-ssr build",
     "serve": "react-scripts-with-ssr serve"
+  },
+  "dependencies": {
+    "doura-react": "workspace:*",
+    "doura": "workspace:*",
+    "express": "^4.17.3",
+    "express-status-monitor": "^1.3.4",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-scripts": "4.0.3",
+    "react-scripts-with-ssr": "0.6.0",
+    "typescript": "^4.7.4"
+  },
+  "devDependencies": {
+    "@types/node": "^13.11.0",
+    "@types/react": "^18.0.5",
+    "@types/react-dom": "^18.0.5",
+    "autocannon": "^7.8.1"
   },
   "browserslist": [
     ">0.2%",
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "devDependencies": {
-    "@types/react": "^18.0.5",
-    "@types/react-dom": "^18.0.5",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "autocannon": "^7.8.1"
-  },
-  "peerDependencies": {
-    "react": ">=16.8",
-    "react-dom": ">=16.8"
-  }
+  ]
 }
