--- a/examples/todo/package.json
+++ b/examples/todo/package.json
@@ -1,19 +1,25 @@
 {
-  "name": "example-tearing",
+  "name": "example-todo",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "doura-react": "workspace:*",
-    "doura": "workspace:*",
-    "react": "next",
-    "react-dom": "next",
-    "@craco/craco": "6.4.3"
-  },
   "scripts": {
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
     "eject": "craco eject"
+  },
+  "dependencies": {
+    "doura-react": "workspace:*",
+    "doura": "workspace:*",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-scripts": "5.0.1",
+    "@craco/craco": "7.0.0",
+    "typescript": "^4.7.4"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.5",
+    "@types/react-dom": "^18.0.5"
   },
   "browserslist": {
     "production": [
