--- a/packages/react/tsconfig.build.json
+++ b/packages/react/tsconfig.build.json
@@ -1,7 +1,7 @@
 {
 	"extends": "../../tsconfig.build",
 	"compilerOptions": {
-    "rootDir": "./src",
+    "rootDir": "./src"
   },
   "include": [
     "src"
