--- a/.github/workflows/docs-public.yml
+++ b/.github/workflows/docs-public.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install and Build 🔧
         run: |
           pnpm install
-          pnpm docs:build
+          pnpm doc:build
       # Popular action to deploy to GitHub Pages:
       # Docs: https://github.com/peaceiris/actions-gh-pages#%EF%B8%8F-docusaurus
       - name: Deploy to GitHub Pages
