chore: rename react-doura

--- a/examples/plugins/package.json
+++ b/examples/plugins/package.json
@@ -9,7 +9,7 @@
     "eject": "craco eject"
   },
   "dependencies": {
-    "doura-react": "workspace:*",
+    "react-doura": "workspace:*",
     "doura": "workspace:*",
     "doura-plugin-persist": "workspace:*",
     "doura-plugin-log": "workspace:*",
