--- a/examples/todo/package.json
+++ b/examples/todo/package.json
@@ -9,7 +9,7 @@
     "eject": "craco eject"
   },
   "dependencies": {
-    "doura-react": "workspace:*",
+    "react-doura": "workspace:*",
     "doura": "workspace:*",
     "react": "18.0.0",
     "react-dom": "18.0.0",
