--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "dourajs",
+  "version": "0.0.0-rc.6",
   "private": true,
   "description": "The root package for doura",
   "keywords": [
@@ -12,8 +13,7 @@
   "packageManager": "pnpm@7.1.5",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "dev": "pnpm -r --filter \"./packages/**\" --stream --parallel run dev",
-    "build": "pnpm -r --filter \"./packages/**\" run build",
+    "build": "node scripts/build.js",
     "clean": "pnpm -r --parallel exec rm -rf node_modules dist && pnpm exec rm -rf node_modules",
     "test": "jest",
     "release": "node scripts/release.js",
@@ -24,10 +24,17 @@
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
+    "@microsoft/api-extractor": "7.23.2",
+    "@rollup/plugin-commonjs": "23.0.2",
+    "@rollup/plugin-json": "5.0.1",
+    "@rollup/plugin-node-resolve": "15.0.1",
+    "@rollup/plugin-replace": "5.0.1",
+    "@rollup/plugin-terser": "0.1.0",
     "@types/jest": "^27.0.1",
     "@types/node": "^13.11.0",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
     "@typescript-eslint/parser": "^4.30.0",
+    "brotli": "1.3.3",
     "chalk": "^4.1.0",
     "dts-cli": "^1.6.0",
     "enquirer": "^2.3.6",
@@ -37,6 +44,7 @@
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-prettier": "^4.0.0",
     "execa": "^4.0.2",
+    "fs-extra": "10.1.0",
     "husky": "^7.0.2",
     "jest": "28.1.1",
     "lint-staged": "^11.1.2",
@@ -44,6 +52,9 @@
     "npm-run-all": "^4.1.5",
     "prettier": "2.3.2",
     "rimraf": "^3.0.2",
+    "rollup": "3.4.0",
+    "rollup-plugin-terser": "7.0.2",
+    "rollup-plugin-typescript2": "0.34.1",
     "semver": "^7.3.8",
     "ts-jest": "28.0.5",
     "tslib": "^2.3.1",
@@ -65,6 +76,5 @@
     "extends": [
       "@commitlint/config-conventional"
     ]
-  },
-  "version": "0.0.0-rc.6"
+  }
 }
