chore: fix react-doura.d.ts incorrectly bundling doura.d.ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,6 @@
 {
+  "extends": "./tsconfig.build.json",
   "compilerOptions": {
-    "target": "es6",
-		"module": "esnext",
-		"moduleResolution": "node",
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "strict": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "noImplicitAny": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "stripInternal": true,
-    "downlevelIteration": true,
-    "noUnusedLocals": true,
-    "declaration": true,
-    "sourceMap": true,
-    "declarationMap": true,
-    "jsx": "react",
-		"lib": ["dom", "esnext"],
-    "outDir": "dist",
     "rootDir": ".",
     "baseUrl": ".",
     "paths": {
