--- a/packages/doura-plugin-persist/package.json
+++ b/packages/doura-plugin-persist/package.json
@@ -1,6 +1,6 @@
 {
   "name": "doura-plugin-persist",
-  "version": "0.0.0-rc.8",
+  "version": "0.0.1",
   "main": "index.js",
   "module": "dist/doura-plugin-persist.esm-bundler.js",
   "types": "dist/doura-plugin-persist.d.ts",
@@ -39,6 +39,6 @@
     "doura": "workspace:*"
   },
   "peerDependencies": {
-    "doura": "0.0.0-rc.8"
+    "doura": "0.0.1"
   }
 }
