--- a/packages/doura/package.json
+++ b/packages/doura/package.json
@@ -1,6 +1,6 @@
 {
   "name": "doura",
-  "version": "0.0.0-rc.8",
+  "version": "0.0.1",
   "description": "Reactive and intuitive state management",
   "main": "index.js",
   "module": "dist/doura.esm-bundler.js",
