chore: init api doc

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,7 @@
 auto-install-peers=true
 strict-peer-dependencies=false
+
+# Using pnpm to rely on the theme-comon package will have some issues, 
+# it can be referd to the discussion and solution of this issue
+# https://github.com/facebook/docusaurus/issues/7880.
+public-hoist-pattern[]=@docusaurus/theme-common*
