--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
   "include": [
     "./global.d.ts",
     "packages/*/src",
-    "packages/*/__tests__",
+    "packages/**/__tests__",
     "test-dts"
   ]
 }
