--- a/examples/todo/package.json
+++ b/examples/todo/package.json
@@ -18,6 +18,7 @@
     "typescript": "^4.7.4"
   },
   "devDependencies": {
+    "@types/webpack-env": "^1.18.0",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.5"
   },
