--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "build": "node scripts/build.js",
+    "benchmark": "pnpm build doura --types && ts-node benchmark/reactivity.ts",
     "clean": "pnpm -r --parallel exec rm -rf node_modules dist && pnpm exec rm -rf node_modules",
     "test": "run-s \"test-unit {@}\" \"test-dts {@}\"",
     "test-unit": "jest",
@@ -34,31 +35,30 @@
     "@rollup/plugin-terser": "0.1.0",
     "@types/jest": "^27.0.1",
     "@types/node": "^13.11.0",
-    "@typescript-eslint/eslint-plugin": "^4.30.0",
-    "@typescript-eslint/parser": "^4.30.0",
+    "benchmark": "2.1.4",
     "brotli": "1.3.3",
     "chalk": "^4.1.0",
     "dts-cli": "^1.6.0",
     "enquirer": "^2.3.6",
     "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-prettier": "^4.0.0",
     "execa": "^4.0.2",
     "fs-extra": "10.1.0",
     "husky": "^7.0.2",
     "jest": "28.1.1",
+    "json2csv": "6.0.0-alpha.2",
     "lint-staged": "^11.1.2",
     "minimist": "^1.2.7",
+    "mutative": "0.4.1",
     "npm-run-all": "^4.1.5",
     "prettier": "2.3.2",
     "rimraf": "^3.0.2",
     "rollup": "3.4.0",
-    "rollup-plugin-terser": "7.0.2",
     "rollup-plugin-typescript2": "0.34.1",
     "semver": "^7.3.8",
     "ts-jest": "28.0.5",
+    "ts-node": "10.9.1",
     "tslib": "^2.3.1",
     "typescript": "^4.7.4"
   },
@@ -68,9 +68,11 @@
   },
   "lint-staged": {
     "*.js": [
+      "eslint --fix",
       "prettier --write"
     ],
     "*.ts?(x)": [
+      "eslint --fix",
       "prettier --parser=typescript --write"
     ]
   },
