--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@rollup/plugin-terser": "0.1.0",
     "@types/jest": "^27.0.1",
     "@types/node": "^13.11.0",
+    "@typescript-eslint/eslint-plugin": "5.50.0",
     "benchmark": "2.1.4",
     "brotli": "1.3.3",
     "chalk": "^4.1.0",
