--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
+    "@commitlint/types": "17.4.4",
     "@microsoft/api-extractor": "7.23.2",
     "@rollup/plugin-commonjs": "23.0.2",
     "@rollup/plugin-json": "5.0.1",
@@ -36,6 +37,7 @@
     "@types/jest": "^27.0.1",
     "@types/node": "^13.11.0",
     "@typescript-eslint/eslint-plugin": "5.50.0",
+    "@typescript-eslint/parser": "5.53.0",
     "benchmark": "2.1.4",
     "brotli": "1.3.3",
     "chalk": "^4.1.0",
@@ -75,11 +77,6 @@
     "*.ts?(x)": [
       "eslint --fix",
       "prettier --parser=typescript --write"
-    ]
-  },
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
     ]
   }
 }
