--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "json2csv": "6.0.0-alpha.2",
     "lint-staged": "^11.1.2",
     "minimist": "^1.2.7",
+    "immer": "9.0.19",
     "mutative": "0.4.1",
     "npm-run-all": "^4.1.5",
     "prettier": "2.3.2",
